--- a/unicoding/css/styles.css
+++ b/unicoding/css/styles.css
@@ -10616,6 +10616,7 @@ html {
 
 body {
   position: relative;
+  /*background-color: #ffc800;*/
 }
 
 p {
@@ -10848,11 +10849,4 @@ section#contato form#contactForm :-ms-input-placeholder {
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Interactive', sans-serif;
 }
