--- a/unicoding/css/stylePlano.css
+++ b/unicoding/css/stylePlano.css
@@ -6,7 +6,7 @@
 
 body{
     /*background-color: rgb(30, 30, 95);*/
-    background-color: rgb(43, 43, 83);
+    background-color: orange;
     font-family: "Open Sans";
 }
 
