--- a/unicoding/css/styles.css
+++ b/unicoding/css/styles.css
@@ -10791,55 +10791,55 @@ header.tituloHeader .tituloHeader-heading {
   height: 2.75rem;
 }
 
-section#contato {
+section#contact {
   background-color: #212529;
   background-image: none;
   background-repeat: no-repeat;
   background-position: center;
 }
-section#contato .section-heading {
+section#contact .section-heading {
   color: #fff;
 }
-section#contato form#contactForm .form-group {
+section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
 }
-section#contato form#contactForm .form-group input,
-section#contato form#contactForm .form-group textarea {
+section#contact form#contactForm .form-group input,
+section#contact form#contactForm .form-group textarea {
   padding: 1.25rem;
 }
-section#contato form#contactForm .form-group input.form-control {
+section#contact form#contactForm .form-group input.form-control {
   height: auto;
 }
-section#contato form#contactForm .form-group-textarea {
+section#contact form#contactForm .form-group-textarea {
   height: 100%;
 }
-section#contato form#contactForm .form-group-textarea textarea {
+section#contact form#contactForm .form-group-textarea textarea {
   height: 100%;
   min-height: 10rem;
 }
-section#contato form#contactForm p.help-block {
+section#contact form#contactForm p.help-block {
   margin: 0;
 }
-section#contato form#contactForm .form-control:focus {
+section#contact form#contactForm .form-control:focus {
   border-color: #ffc800;
   box-shadow: none;
 }
-section#contato form#contactForm ::-webkit-input-placeholder {
+section#contact form#contactForm ::-webkit-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #ced4da;
 }
-section#contato form#contactForm :-moz-placeholder {
+section#contact form#contactForm :-moz-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #ced4da;
 }
-section#contato form#contactForm ::-moz-placeholder {
+section#contact form#contactForm ::-moz-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #ced4da;
 }
-section#contato form#contactForm :-ms-input-placeholder {
+section#contact form#contactForm :-ms-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #ced4da;
